network: Show an error when we fail to turn off hotspot

And reset the switch as well. I don't know in which circumstance it
could happen, but it's all we can do for now.

https://bugzilla.gnome.org/show_bug.cgi?id=723643